# lstd_aws

./: pyproject.toml  readme.md  requirements.txt
deploy_aws/artifact_promotion_lambda/: artifact_promotion_lambda.py
deploy_aws/artifact_promotion_lambda/roles/: artifact-promotion-lambda-role-policy.json
deploy_aws/inference/: lstd-sqs-worker.service  lstd_sqs_worker.env
deploy_aws/inference/roles/: ec2-lstd-live-role-policy.json
deploy_aws/terraform/: compute.tf  lambda.tf  outputs.tf  storage_queue.tf  terraform.tfvars  variables.tf
deploy_aws/train/: run_train.py  userdata.sh
deploy_aws/train/roles/: ec2-lstd-train-role-policy.json
deploy_aws/websocket/: install_ws_collector.sh  requirements-ws.txt  userdata.sh  ws-collector.service  ws_collector.env  ws_collector.py
deploy_aws/websocket/roles/: pipeline-ec2-role-policy.json
lstd_aws/: __init__.py  __main__.py
lstd_aws/binanace_history/: __init__.py  client.py  config.py  pipeline.py
lstd_aws/datasets/: __init__.py  lstd_dataset.py  scalers.py  split.py  time_features.py  utils.py
lstd_aws/feature_engineering/: __init__.py  config.py  engineering.py  export.py  pipeline.py  state.py
lstd_aws/live_inference/: __init__.py  config.py  service.py  sqs_worker.py  state.py  telemetry.py
lstd_aws/lstd_core/: __init__.py  components.py  config.py  model.py
lstd_aws/orchestration/: __init__.py  cli.py  config.py  local_worker_replay.py  run.py
lstd_aws/training/: __init__.py  config.py  data.py  early_stopping.py  metrics.py  s3_artifacts.py  trainer.py  utils.py
(+6 files in other folders)
